# arctic-ice-extent

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.in  requirements.txt  seaborn.ipynb  setup_env.py
deprec/: 01a_data_ingestion_era5.ipynb
docs/: data_dictionary.md  data_layout.md  database.md  evaluation_methodology.md  experiment_designs.md  methodology.md  project_plan.md  project_story.md  results_log.md
docs/learning/: understanding_gradients.py  understanding_pytorch.py
experiments/: shapefiles.ipynb
notebooks/: 01_Exploration.ipynb  01a_data_ingestion_era5.ipynb  01a_data_ingestion_era5_download.ipynb  01b_data_ingestion_nsidc.ipynb  01c_data_ingestion_era5_transformation.ipynb  02_EDA.ipynb  02_transfer_to_database.ipynb  03_baselines.ipynb  03_sarima_baseline.ipynb  03_sarima_baseline_enhanced.ipynb  03a_sarima_baseline.ipynb  03b_baseline_models.ipynb  04_basic_lstm.ipynb  05_multivariate_lstm.ipynb  06_seq2seq_lstm.ipynb  07_model_comparison.ipynb  08_time_series_backtesting.ipynb  09_lstm_ensemble.ipynb  09b_multivariate_lstm_ensemble.ipynb  10_mc_dropout.ipynb  11a_recursive_multistep_baseline.ipynb  my_first_arima.ipynb  my_first_lstm.ipynb
notebooks/01_data_exploration/: 01_initial_exploration.ipynb
results/: model_comparison.csv
src/: coordinate_utils.py  data_bootstrap.py  data_utils.py  evaluation_utils.py  lstm_utils.py  plot_utils.py  train.py
utilities/: download_geotiffs.py  download_nsidc.py
